--- a/tests/AndroidManifest.xml
+++ b/tests/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="chum.tests"
-          android:versionCode="1"
-          android:versionName="0.0.1">
+          android:versionCode="10"
+          android:versionName="x.y.z">
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
          which is needed when building test cases. -->
